--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
+    "nanoid": "^1.0.2",
+    "random-js": "^1.0.8",
+    "rosie": "^1.6.0",
+    "rxjs": "^5.5.7",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4"
   }
